--- a/pom.xml
+++ b/pom.xml
@@ -17,11 +17,11 @@
         <quarkus.platform.group-id>io.quarkus</quarkus.platform.group-id>
         <surefire-plugin.version>2.22.1</surefire-plugin.version>
         <!-- This version works ! -->
-        <!-- quarkus-plugin.version>1.5.1.Final</quarkus-plugin.version -->
-        <!-- quarkus.platform.version>1.5.1.Final</quarkus.platform.version -->
+        <!-- quarkus-plugin.version>1.2.1.Final</quarkus-plugin.version -->
+        <!-- quarkus.platform.version>1.2.1.Final</quarkus.platform.version -->
         <!-- This version doesnt work ! -->
-        <quarkus-plugin.version>1.2.1.Final</quarkus-plugin.version>
-        <quarkus.platform.version>1.2.1.Final</quarkus.platform.version>
+        <quarkus-plugin.version>1.5.1.Final</quarkus-plugin.version>
+        <quarkus.platform.version>1.5.1.Final</quarkus.platform.version>
 
     </properties>
 
@@ -132,6 +132,12 @@
             <!--version>${junit.platform.version}</version-->
             <!--scope>test</scope-->
         <!--/dependency-->
+         <dependency>
+            <groupId>com.github.tomakehurst</groupId>
+            <artifactId>wiremock-jre8</artifactId>
+            <version>2.26.3</version>
+            <scope>test</scope>
+        </dependency>
         <dependency>
             <groupId>io.specto</groupId>
             <artifactId>hoverfly-java-junit5</artifactId>
